welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: reassignment to val
		speed = speed + 5
                      ^